# make-it-glitch

./: CMakeLists.txt  README.md  config.h.in
.github/workflows/: cmake.yml
docs/: index.html
src/: essential.cpp  export-glitch.cpp  export.cpp  main.cpp  video_decoder.cpp  video_decoder.hpp
